<resources>
    <string name="app_name">MonsterMelee</string>
    <string name="SelectCharacter">Select a warrior for battle!</string>
    <string name="Health">Health</string>
    <string name="Crit">Crit</string>
    <string name="Intelligence">Intelligence</string>
    <string name="Attack">Attack</string>
    <string name="UpgradeYourWarrior">Upgrade your warrior</string>
    <string name="Plus">+</string>
    <string name="fight">Fight!</string>
    <string name="Back">Back</string>
    <string name="EnemyIntro">Prepare to battle...</string>
    <string name="giveUP">Are you sure you want to give up?</string>
    <string name="Yes">yes</string>
    <string name="No">No</string>
    <string name="Home">Home</string>
    <string name="GameOver">Game Over!</string>
    <string name="YouDied">You Died...</string>
    <string name="YouWon">You Won!</string>
    <string name="Continue">Continue</string>
    <string name="BeatAllMonsters">Congratulations!\nYou have beat all monsters!</string>
    <string name="Awesome">You are awesome!</string>
    <string name="Credits">Credits</string>
    <string name="MonsterMeleeTeam">Monster Melee Team:</string>
    <string name="TeamMembers">Pioline Choudhury\nChristina Landstrom\nMaggie Lei\nSteve Oosting\nJames Tyner</string>
    <string name="GameArt">Game Art:</string>
    <string name="AssetsCredit">Game images were borrowed from the following websites (with permission):\n\nwww.craftpix.net\nwww.flaticon.com</string>
</resources>
